--- a/src/langs/fu.json
+++ b/src/langs/fu.json
@@ -14,7 +14,7 @@
   "game_created_gameEndConditions": "Умови завершення гри:",
   "game_created_button_join": "ㅤЗалетітиㅤ",
   "game_created_button_start": "ㅤРозпочатиㅤ",
-  "game_created_button_cancel": "ㅤЗнищити Москвуㅤ",
+  "game_created_button_cancel": "ㅤЗнищити москвуㅤ",
   "game_created_button_leave": "ㅤㅤЗ'їбатисяㅤ",
   "game_created_button_edit": "ㅤЗмінити обрядиㅤ",
   "game_created_button_new": "Заснувати нову гру",
@@ -23,7 +23,7 @@
   "game_cancel_success_message": "Гру анігільовано. Заснуйте іншу!",
   "game_autocancel_message": "Гру автоматично анігільовано.",
   "game_start_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете роз'їбати цю гру байрактарами, бо не отаман!",
-  "game_start_error_notEnoughPlayers": ":busts_in_silhouette: Недостатньо гравців для початку різанини!",
+  "game_start_error_notEnoughPlayers": ":busts_in_silhouette: Недостатньо бандеренят для початку різанини!",
   "game_start_error_notEnoughRoles": ":busts_in_silhouette: Недостатньо подоб для початку різанини!",
   "game_started_button_endGame": "Розбомбити Бєлгород",
   "game_started_title": "Різанину почато",
@@ -34,13 +34,15 @@
   "game_end_error_noAccess": ":man_gesturing_no: Ви не отаман, ідіть нахуй!",
   "game_end_success_message": "Гру закінчено. Місце отамана вільне!",
   "game_end_success_privateMessage": "Гру закінчено отаманом. Ну він і підор!",
-  "game_join_error_alreadyJoined": "Не хвилюйтеся, ви вже під Москвою :wink:",
+  "game_join_error_alreadyJoined": "Не хвилюйтеся, ви вже під москвою :wink:",
   "game_join_success_message": ":white_check_mark: Ви успішно приєдналися до різанини!",
-  "game_leave_error_alreadyLeft": "Хвилюйтеся, не під Москвою :wink:",
+  "game_leave_error_alreadyLeft": "Хвилюйтеся, не під москвою :wink:",
   "game_leave_success_message": ":ballot_box_with_check: Ви успішно з'їбалися зі збираючуюся різаниною.",
   "game_edit_error_noAccess": ":man_gesturing_no: Ви не отаман, ідіть нахуй!",
-  "game_edit_roles_placeHolder": "Оберіть обряди...",
+  "game_edit_roles_placeHolder": "Оберіть подоби...",
+  "game_edit_roles_error_notFound": ":jigsaw: А обрані подоби зараз з вами в одній кімнаті?",
   "game_edit_conditions_placeHolder": "Оберіть умови завершення гри...",
+  "game_edit_conditions_error_notFound": ":jigsaw: А обрані умови зараз з вами в одній кімнаті?",
   "game_edit_button_votes_hide": "Приховувати жидів",
   "game_edit_button_votes_notHide" : "Не приховувати жидів",
   "game_edit_success_message": ":white_check_mark: Різанину успішно змінено!",
@@ -84,7 +86,7 @@
   "role_police_description": "%Ви розслідуєте злочини ~~в третьому рейху~~ на Січі! :oncoming_police_car:\n:mag_right:  Щоночі ви перевіряєте одне бандернятко та з'ясовуєте, москалик то чи ні.\n:trophy:  Ви перемагаєте разом із козаками, якщо на Січі не залишається москаликів. :exclamation: Будьте обережні: якщо москалі складатимуть хоча б половину живих козаків, вони захоплять Січ та виграють!%",
   "role_mistress_name": "Арестович",
   "role_mistress_placeHolder": "Оберіть, до кого хочете навідатися...",
-  "role_mistress_description": "%Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\n:strawberry:  Щоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\n:trophy:  Ви перемагаєте разом із мирними, якщо в місті не залишається москаликів. :exclamation: Будьте обережні: якщо москаликів більше половини активних бандерняток, вона захоплює Січ та виграє!%",
+  "role_mistress_description": "%Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\n:strawberry:  Щоночі ви навідуєтеся до одного з бандереняток. Наступного дня це бандеренятко не може бути вигнане голосуванням.\n:trophy:  Ви перемагаєте разом із козаками, якщо на Січі не залишається москаликів. :exclamation: Будьте обережні: якщо москалі складатимуть хоча б половину живих козаків, вони захоплять Січ та виграють!%",
   "role_check_reply_mafia1": ":skull_crossbones: ",
   "role_check_reply_mafia2": " москалик!",
   "role_check_reply_notMafia1": ":negative_squared_cross_mark: ",
@@ -104,7 +106,7 @@
   "condition_peacefulWin_WinEmbedDescription": "%Козаки перемогли — русні на Січі не лишилося.\nМоскаликами були: {sr:killer:string}.%",
 
   "role_embed_action_name": "Дія",
-  "role_embed_groupDec_name": "Чи нищять Москву разом?",
+  "role_embed_groupDec_name": "Чи нищять москву разом?",
   "role_embed_spawnFrom_name": "Мінімальна кількість бандерняток для народження",
   "role_embed_selfSelectable_name": "Чи шизоїд?",
   "role_embed_count_name": "Кількість",
@@ -157,69 +159,69 @@
   "role_create_error_notFound": ":jigsaw: А ця подоба зараз з вами в одній кімнаті?",
   "role_create_error_noAccess": ":man_gesturing_no: Судячи з вашого паспорти, у вас немає прав, але ви завжди можете клонувати.",
   "role_create_title1": "Створення подоби",
-  "role_create_roleName_label": "Назва",
-  "role_create_roleName_placeHolder": "назва вашої ролі",
+  "role_create_roleName_label": "Ім'я",
+  "role_create_roleName_placeHolder": "ім'я вашої подоби",
   "role_create_roleDescription_label": "Опис",
-  "role_create_roleDescription_placeHolder": "опис вашої ролі; інформація про скрипти: /help → Створення скриптів",
+  "role_create_roleDescription_placeHolder": "опис вашої подоби; інфа про скриптики: /help → Створення скриптиків",
   "role_create_roleImage_label": "Посилання на мініатюру",
-  "role_create_roleImage_placeHolder": "посилання на зображення для мініатюри",
+  "role_create_roleImage_placeHolder": "посилання на картинку для мініатюри",
   "role_create_roleCount_label": "Кількість",
-  "role_create_roleCount_placeHolder": "кількість гравців із вашою роллю; інформація про скрипти: /help → Створення скриптів",
-  "role_create_rolePlaceHolder_label": "Плейсхолдер для меню дії",
-  "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню дії вашої ролі",
+  "role_create_roleCount_placeHolder": "кількість бандереняток із вашою подобою; інфа про скриптики: /help → Створення скриптиків",
+  "role_create_rolePlaceHolder_label": "Заклик до дії",
+  "role_create_rolePlaceHolder_placeHolder": "заклик до дії вашої подоби",
   "role_create_goNext_button": "Перейти далі",
   "role_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
-  "role_create_title2": "Створення ролі: ",
+  "role_create_title2": "Створення подоби: ",
   "role_create_roleAction_label": "Дія",
-  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці в /help → Створення скриптів",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці: /help → Створення скриптиків",
   "role_create_roleSelectable_label": "Чи шизоїд?",
   "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "Затримка між діями",
   "role_create_roleDelay_placeHolder": "затримка між діями вашої подоби в днях",
-  "role_create_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
-  "role_create_roleSpawnFrom_placeHolder": "мінімальна кількість гравців для появи вашої ролі",
-  "role_create_roleGroupSelection_label": "Чи нищять Москву разом?",
+  "role_create_roleSpawnFrom_label": "Мінімальна кількість бандереняток для появи",
+  "role_create_roleSpawnFrom_placeHolder": "мінімальна кількість бандереняток для появи вашої подоби",
+  "role_create_roleGroupSelection_label": "Чи нищять москву разом?",
   "role_create_roleGroupSelection_placeHolder": "true | false",
   "role_create_success_message": ":white_check_mark: Подобу успішно створено:",
 
   "role_edit_error_notFound": ":jigsaw: А ця подоба зараз з вами в одній кімнаті?",
   "role_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю подобу!",
-  "role_edit_select_message": "Оберіть подобу для зміни статі:",
-  "role_edit_select_placeHolder": "Подоба для зміни статі...",
+  "role_edit_select_message": "Оберіть подобу для змінення:",
+  "role_edit_select_placeHolder": "Оберіть подобу для змінення...",
   "role_edit_selectField_message": "Оберіть поле для змінення:",
   "role_edit_selectField_placeHolder": "Оберіть поле для змінення...",
-  "role_edit_selectField_roleName_label": "Назва",
+  "role_edit_selectField_roleName_label": "Ім'я",
   "role_edit_selectField_roleDescription_label": "Опис",
   "role_edit_selectField_roleImage_label": "Посилання на мініатюру",
   "role_edit_selectField_roleCount_label": "Кількість",
-  "role_edit_selectField_rolePlaceHolder_label": "Плейсхолдер для меню дії",
+  "role_edit_selectField_rolePlaceHolder_label": "Заклик до дії",
   "role_edit_selectField_roleAction_label": "Дія",
-  "role_edit_selectField_roleSelectable_label": "Чи може обирати себе?",
+  "role_edit_selectField_roleSelectable_label": "Чи шизоїд?",
   "role_edit_selectField_roleDelay_label": "Затримка між діями",
-  "role_edit_selectField_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
-  "role_edit_selectField_roleGroupSelection_label": "Чи грає в групі?",
-  "role_edit_title": "Змінення ролі: ",
-  "role_edit_roleName_label": "Назва",
-  "role_edit_roleName_placeHolder": "нова назва вашої ролі",
+  "role_edit_selectField_roleSpawnFrom_label": "Мінімальна кількість бандереняток для появи",
+  "role_edit_selectField_roleGroupSelection_label": "Чи нищять москву разом?",
+  "role_edit_title": "Змінення подоби: ",
+  "role_edit_roleName_label": "Ім'я",
+  "role_edit_roleName_placeHolder": "нове ім'я вашої подоби",
   "role_edit_roleDescription_label": "Опис",
-  "role_edit_roleDescription_placeHolder": "новий опис вашої ролі; інформація про скрипти: /help → Створення скриптів",
+  "role_edit_roleDescription_placeHolder": "новий опис вашої подоби; інфа про скриптики: /help → Створення скриптиків",
   "role_edit_roleImage_label": "Посилання на мініатюру",
-  "role_edit_roleImage_placeHolder": "посилання на ваше нове зображення",
+  "role_edit_roleImage_placeHolder": "посилання на вашу нову картинку",
   "role_edit_roleCount_label": "Кількість",
-  "role_edit_roleCount_placeHolder": "нова кількість гравців з вашою роллю; інформація про скрипти: /help → Створення скриптів",
-  "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню дії",
-  "role_edit_rolePlaceHolder_placeHolder": "новий плейсхолдер для меню дії вашої ролі",
+  "role_edit_roleCount_placeHolder": "нова кількість бандереняток з вашою подобою; інфа про скриптики: /help → Створення скриптиків",
+  "role_edit_rolePlaceHolder_label": "Заклик до дії",
+  "role_edit_rolePlaceHolder_placeHolder": "новий заклик до дії вашої подоби",
   "role_edit_roleAction_label": "Дія",
   "role_edit_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity",
-  "role_edit_roleSelectable_label": "Чи може обирати себе?",
+  "role_edit_roleSelectable_label": "Чи шизоїд?",
   "role_edit_roleSelectable_placeHolder": "true | false",
   "role_edit_roleDelay_label": "Затримка між діями",
-  "role_edit_roleDelay_placeHolder": "нова затримка між діями вашої ролі в днях",
-  "role_edit_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
-  "role_edit_roleSpawnFrom_placeHolder": "нова мінімальна кількість гравців для появи вашої ролі",
-  "role_edit_roleGroupSelection_label": "Чи грає в групі?",
+  "role_edit_roleDelay_placeHolder": "нова затримка між діями вашої подоби в днях",
+  "role_edit_roleSpawnFrom_label": "Мінімальна кількість бандереняток для появи",
+  "role_edit_roleSpawnFrom_placeHolder": "нова мінімальна кількість бандереняток для появи вашої подоби",
+  "role_edit_roleGroupSelection_label": "Чи нищять москву разом?",
   "role_edit_roleGroupSelection_placeHolder": "true | false",
-  "role_edit_success_message": ":white_check_mark: Подоба успішно змінено:",
+  "role_edit_success_message": ":white_check_mark: Подобу успішно змінено:",
 
   "role_delete_error_noRoles": "У вас немає подоб. Але ви легко можете створити їх!",
   "role_delete_error_notFound": ":jigsaw: А ця подоба зараз з вами в одній кімнаті?",
@@ -228,7 +230,7 @@
   "role_delete_select_placeHolder": "Оберіть подобу для анігіляції...",
   "role_delete_success_message": ":ballot_box_with_check: Подобу успішно анігільовано.",
 
-  "condition_view_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було анігільовано.",
+  "condition_view_error_notFound": ":jigsaw: А ця умова зараз з вами в одній комнаті?",
   "condition_view_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете переглядати цю умову!",
   "condition_view_select_placeHolder": "Оберіть умову для інтимного перегляду...",
   "condition_view_button_clone": "Техніка клонування з наруто",
@@ -239,21 +241,21 @@
 
   "condition_create_error_number": ":man_gesturing_no: Сорі, інженер цього бота лох, тому ви не можете створювати більше ніж 21 умови!",
   "condition_create_title1": "Створення умови",
-  "condition_create_conditionName_label": "Назва",
+  "condition_create_conditionName_label": "Ім'я",
   "condition_create_conditionName_placeHolder": "Моя умова перемоги мафії",
   "condition_create_goNext_button": "Перейти далі",
   "condition_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
   "condition_create_title2": "Створення умови: ",
   "condition_create_condition_label": "Умова",
-  "condition_create_condition_placeHolder": "ваша умова; інформація про скрипти: /help → Створення скриптів",
+  "condition_create_condition_placeHolder": "ваша умова; інфа про скриптики: /help → Створення скриптиків",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Перемагають козаки ;)",
   "condition_create_embedDescription_label": "Опис",
-  "condition_create_embedDescription_placeHolder": "%Із загадкових причин мафія перемагає...%",
+  "condition_create_embedDescription_placeHolder": "%Перемога: русні на Січі не лишилося!%",
   "condition_create_embedThumbnail_label": "Посилання на мініатюру",
-  "condition_create_embedThumbnail_placeHolder": "посилання на зображення з неймовірним кошеням",
-  "condition_create_winRole_label": "Подоба, яка перемагає",
-  "condition_create_winRole_placeHolder": "просто назва ролі, що перемагає",
+  "condition_create_embedThumbnail_placeHolder": "посилання на картинку з неймовірними свинками",
+  "condition_create_winRole_label": "Подоба, що перемагає",
+  "condition_create_winRole_placeHolder": "просто ім'я подоби, що перемагає",
   "condition_create_success_message": ":white_check_mark: Умову успішно створено:",
 
   "condition_edit_error_notFound": ":jigsaw: А ця умова зараз з вами в одній комнаті?",
@@ -262,22 +264,22 @@
   "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
   "condition_edit_title": "Змінення умови: ",
   "condition_edit_condition_label": "Умова",
-  "condition_edit_condition_placeHolder": "ваша нова умова; інформація про скрипти: /help → Створення скриптів",
-  "condition_edit_embedTitle_label": "Заголовок",
-  "condition_edit_embedTitle_placeHolder": "новий заголовок вашої умови",
+  "condition_edit_condition_placeHolder": "ваша нова умова; інфа про скриптики: /help → Створення скриптиків",
+  "condition_edit_embedTitle_label": "Ім'я",
+  "condition_edit_embedTitle_placeHolder": "нове ім'я вашої умови",
   "condition_edit_embedDescription_label": "Опис",
-  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інформація про скрипти: /help → Створення скриптів",
+  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інфа про скриптики: /help → Створення скриптиків",
   "condition_edit_embedThumbnail_label": "Посилання на мініатюру",
-  "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
-  "condition_edit_winRole_label": "Подоба, яка перемагає",
-  "condition_edit_winRole_placeHolder": "назва вашої нової ролі, що перемагає",
+  "condition_edit_embedThumbnail_placeHolder": "посилання на вашу нову картинку",
+  "condition_edit_winRole_label": "Подоба, що перемагає",
+  "condition_edit_winRole_placeHolder": "назва вашої нової подоби, що перемагає",
   "condition_edit_success_message": ":white_check_mark: Умову успішно змінено:",
 
   "condition_delete_error_noConditions": "У вас немає умов, чого ж ви чекаєте?!",
   "condition_delete_error_notFound": ":jigsaw: А ця умова зараз з вами в одній комнаті?",
   "condition_delete_error_noAccess": ":man_gesturing_no: У вас немає прав, ви ніхто!",
-  "condition_delete_select_message": "Оберіть умову для анігільовано:",
-  "condition_delete_select_placeHolder": "Оберіть умову для анігільовано...",
+  "condition_delete_select_message": "Оберіть умову для анігіляції:",
+  "condition_delete_select_placeHolder": "Оберіть умову для анігіляції...",
   "condition_delete_success_message": ":ballot_box_with_check: Умову успішно анігільовано.",
 
   "news_error_noAccess_enabled": ":man_gesturing_no: Ви не можете вмикати та вимикати сповіщення про новини для іншої людини, але можете для себе!\n:mailbox: У вас увімкнено сповіщення про новини. Щоб вимкнути їх, відкрийте профіль командою </profile:1100344392067338261> та натисніть кнопку «**Сповіщення про новини**».",
@@ -297,7 +299,7 @@
   "help_about_value": "`Версія:` 2.0.0.\n`Вихідний код:` https://github.com/Pazzann/mafia-bot\n`Офіційний сервер:` https://discord.gg/ZWnx8rqGTD\n`Розробка:` Boy From God#2772\n`Тексти:` denyshon#9143, Boy From God#2772\n`Локалізація:` denyshon#9143 (`uk`, `ru`), Boy From God#2772 (`fu`)\n`Арти:` Midjourney, popa_sani#4041",
 
   "help_button_rules": "Правила гри",
-  "help_button_scripting": "Створення скриптів",
+  "help_button_scripting": "Створення скриптиків",
   "help_button_helpmessage": "Написати до СБУ",
 
   "helpMessage_title": "Повідомлення до СБУ",
