--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -40,9 +40,9 @@
   "game_leave_success_message": ":ballot_box_with_check: Вы успешно покинули игру.",
   "game_edit_error_noAccess": ":man_gesturing_no: Извините, вы не можете изменять эту игру, потому что не являетесь её организатором!",
   "game_edit_roles_placeHolder6": "Выберите роли...",
-  "game_edit_roles_error_notFound": ":jigsaw: Роль не найдена! Возможно, она была удалена.",
+  "game_edit_roles_error_notFound": ":jigsaw: Некоторые из выбранных ролей не найдены! Возможно, они были удалены.",
   "game_edit_conditions_placeHolder": "Выберите условия окончания игры...",
-  "game_edit_conditions_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
+  "game_edit_conditions_error_notFound": ":jigsaw: Некоторые из выбранных условий не найдены! Возможно, они были удалены.",
   "game_edit_button_votes_hide": "Скрывать голоса",
   "game_edit_button_votes_notHide" : "Не скрывать голоса",
   "game_edit_success_message": ":white_check_mark: Игра успешно изменена!",
@@ -173,7 +173,7 @@
   "role_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
   "role_create_title2": "Создание роли: ",
   "role_create_roleAction_label": "Действие",
-  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробности в /помощь → Создание скриптов",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробности: /помощь → Создание скриптов",
   "role_create_roleSelectable_label": "Может выбирать себя?",
   "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "Задержка между действиями",
