--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -40,9 +40,9 @@
   "game_leave_success_message": ":ballot_box_with_check: Ви успішно залишили гру.",
   "game_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю гру, бо не є її організатором!",
   "game_edit_roles_placeHolder": "Оберіть ролі...",
-  "game_edit_roles_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
+  "game_edit_roles_error_notFound": ":jigsaw: Деякі з обраних ролей не знайдено! Можливо, їх було видалено.",
   "game_edit_conditions_placeHolder": "Оберіть умови завершення гри...",
-  "game_edit_conditions_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
+  "game_edit_conditions_error_notFound": ":jigsaw: Деякі з обраних умов не знайдено! Можливо, їх було видалено.",
   "game_edit_button_votes_hide": "Приховувати голоси",
   "game_edit_button_votes_notHide" : "Не приховувати голоси",
   "game_edit_success_message": ":white_check_mark: Гру успішно змінено!",
@@ -173,7 +173,7 @@
   "role_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
   "role_create_title2": "Створення ролі: ",
   "role_create_roleAction_label": "Дія",
-  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці в /допомога → Створення скриптів",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці: /допомога → Створення скриптів",
   "role_create_roleSelectable_label": "Чи може обирати себе?",
   "role_create_roleSelectable_placeHolder": "true | false",
   "role_create_roleDelay_label": "Затримка між діями",
