--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -40,9 +40,9 @@
   "game_leave_success_message": ":ballot_box_with_check: You have successfully left the game.",
   "game_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this game because you aren't its host!",
   "game_edit_roles_placeHolder": "Select roles...",
-  "game_edit_roles_error_notFound": ":jigsaw: Role not found! It may have been deleted.",
+  "game_edit_roles_error_notFound": ":jigsaw: Some of the selected roles not found! They may have been deleted.",
   "game_edit_conditions_placeHolder": "Select end game conditions...",
-  "game_edit_conditions_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
+  "game_edit_conditions_error_notFound": ":jigsaw: Some of the selected conditions not found! They may have been deleted.",
   "game_edit_button_votes_hide": "Hide Votes",
   "game_edit_button_votes_notHide" : "Don't Hide Votes",
   "game_edit_success_message": ":white_check_mark: The game was successfully edited!",
