--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -103,7 +103,7 @@
   "condition_killerWin_WinEmbedDescription": "%Маньяк {sr:killer:string} победил — весь город вырезан.%",
   "condition_peacefulWin_name": "Условие победы мирных",
   "condition_peacefulWin_WinEmbedTitle": "Мирные победили!",
-  "condition_peacefulWin_WinEmbedDescription": "%Мирные победили — преступников в городе не осталось.\nУбийцами были: {sa:killer:string}.%",
+  "condition_peacefulWin_WinEmbedDescription": "%Мирные победили — преступников в городе не осталось.\nУбийцами были: {sa:kill:string}.%",
 
   "role_embed_action_name": "Действие",
   "role_embed_groupDec_name": "Играет в группе?",
