--- a/src/langs/sp.json
+++ b/src/langs/sp.json
@@ -292,7 +292,7 @@
   "help_about_server": "\n`Servidor oficial:`",
   "help_about_developer": "\n`Desarrollo:`",
   "help_about_text": "\n`Text:`",
-  "help_about_localisation": "`Localización:`",
+  "help_about_localisation": "\n`Localización:`",
   "help_about_arts": "\n`Artes:`",
 
 
